@@ -19,6 +19,9 @@
    after worktrees or the main repository have been moved.
    (Jelmer Vernooĳ, #1799)
 
+ * Add ``dulwich verify-tag`` command to check GPG signatures of tags.
+   (Jelmer Vernooĳ, #1833)
+
 0.24.2	2025-09-25
 
  * Added ``porcelain.shortlog`` function to summarize commits by author,
